--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: Jaishree
-email: your-email@domain.com
+email: jaishreegaur17@gmail.com
 url: https://jaish17.github.io/home
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+keywords: "business analyst, engineer, cloud, devops"
+skills: "Business Analyst - Engineer - Graduate Student"
+meta_author: Gaur Jaishree
 
 # Google webmaster tools
 google_verify:
@@ -32,8 +32,8 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
-  location: Location
+  copyright: Jekyll | Jaishree Gaur
+  location: Canada
   social: Around the Web
   credits: Credits
 
@@ -52,11 +52,11 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Ontario
+  - line: Canada
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+contact: 'jaishreegaur17@gmail.com'
 
 # Build settings
 markdown: kramdown
